#290  Too large a gap between Cite on Wikipedia and Translate details  (fixed)

--- a/src/main/webapp/themes/default/css/fulldoc.css
+++ b/src/main/webapp/themes/default/css/fulldoc.css
@@ -48,6 +48,12 @@
 }
 
 
+#translate-container{
+	position:	relative;
+	top:		-0.5em;	
+}
+
+
 #carousel-1{	
 	max-width:			220px;		/* max thumbanil size plus galleria stage offset (2 * 10) */
 	width:				220px;
